fixed splash page on mobile

--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -2,7 +2,7 @@
 .band-navbar {
     background-color: black;
     height: 6vh;
-    width: 100%;
+    width: 100vw;
 }
 
 .card-img {
